# Multithreaded-WebServer-In-Rust

./: .env  README.md
frontend/: index.html  script.js  styles.css
project/: .env  .env.example  .gitignore  404.html  Cargo.toml  admin_only.html  diesel.toml  hello.html  home.html  login.html  login_page.html  private_page.html  register.html  schema.sql  setup_db.sh
project/migrations/2025-03-18-192310_users_db/: up.sql
project/src/: auth.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  proxy_server.rs  schema.rs  security.rs  template_handler.rs  threadpool.rs
project/src/config/: server_config.toml
project/static/: admin_page.html  private_page.html
