[package]
name = "jwtauth"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
jsonwebtoken = "9.3.0"
chrono = "0.4"
scrypt = "0.11.0"
log = "0.4"
log4rs = "1.0.0"
thiserror = "2.0.11"
dotenv = "0.15.0"
