[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
rand = "0.8"
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
once_cell = "1.18"
httparse = "1.8.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5"