[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
hyper = { version = "0.14", features = ["full", "http1", "http2", "client"] }
hyper-tls = "0.5"
log = "0.4"
log4rs = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
jsonwebtoken = "8"
chrono = "0.4"
dotenv = "0.15"
rand = "0.8"
threadpool = "1.8"
scrypt = "0.11.0"
cookie = "0.18.1"
thiserror = "2.0.12"
